--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start":"vite",
+    "start": "vite",
     "dev": "run-p server start",
     "server": "nodemon server.js",
     "build": "vite build",
@@ -13,12 +13,14 @@
   },
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "chart.js": "^4.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mssql": "^11.0.1",
     "nodemon": "^3.1.4",
     "npm-run-all": "^4.1.5",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
