--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
   },
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "chart": "^0.1.2",
     "chart.js": "^4.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "for": "^0.0.1-dev.0",
     "mssql": "^11.0.1",
     "nodemon": "^3.1.4",
     "npm-run-all": "^4.1.5",
+    "package": "^1.0.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "react-shadow": "^20.5.0"
+    "react-shadow": "^20.5.0",
+    "the": "^1.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
